--- a/src/components/elements/CaptionBoxCenter.css
+++ b/src/components/elements/CaptionBoxCenter.css
@@ -1,24 +1,13 @@
 .caption {
-  position: absolute;
-  width: 60%;
-  top: 50%;
-  left: 50%;
-  -webkit-transform: translate(-50%, -50%);
-          transform: translate(-50%, -50%);
-  padding: 1rem auto;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
+  width: 80%;
+  margin: 1rem auto;
+  padding-top: 10rem;
+}
+
+@media (max-width: 900px) {
+  .caption {
+    padding-top: 0rem;
+  }
 }
 
 .caption h1 {
@@ -30,8 +19,14 @@
 
 @media (max-width: 900px) {
   .caption h1 {
-    font-size: 2rem;
+    font-size: 2.5rem;
   }
+}
+
+.caption hr {
+  width: 40%;
+  background-color: #004e92;
+  margin: 1rem auto;
 }
 
 .caption p {
