--- a/src/components/elements/CaptionBoxCenter.scss
+++ b/src/components/elements/CaptionBoxCenter.scss
@@ -14,16 +14,20 @@
 // --------------
 
 .caption {
-  position: absolute;
-  width: 60%;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  padding: 1rem auto;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
+  // position: absolute;
+  width: 80%;
+  // top: 50%;
+  // left: 50%;
+  // transform: translate(-50%, -50%);
+  margin: 1rem auto;
+  // display: flex;
+  // justify-content: center;
+  // align-items: center;
+  // flex-direction: column;
+  padding-top: 10rem;
+  @include at-900px() {
+    padding-top: 0rem;
+  }
 
   h1 {
     font-size: 3rem;
@@ -32,8 +36,14 @@
     text-align: center;
 
     @include at-900px() {
-      font-size: 2rem;
+      font-size: 2.5rem;
     }
+  }
+
+  hr {
+    width: 40%;
+    background-color: #004e92;
+    margin: 1rem auto;
   }
 
   p {
