--- a/src/components/elements/SectionBoxWithAnimation.css
+++ b/src/components/elements/SectionBoxWithAnimation.css
@@ -9,9 +9,9 @@
       -ms-flex-align: center;
           align-items: center;
   padding: 2rem 1rem;
-  height: 100vh;
   background: -webkit-gradient(linear, left top, right top, from(#ffffff), to(#dcdedf));
   background: linear-gradient(to right, #ffffff, #dcdedf);
+  padding: 4rem 0rem;
 }
 
 @media (max-width: 600px) {
