--- a/src/components/elements/SectionBoxWithAnimation.scss
+++ b/src/components/elements/SectionBoxWithAnimation.scss
@@ -18,9 +18,10 @@
   justify-content: space-between;
   align-items: center;
   padding: 2rem 1rem;
-  height: 100vh;
+  // height: 100vh;
   // width: 100%;
   background: linear-gradient(to right, #ffffff, #dcdedf);
+  padding: 4rem 0rem;
 
   @include at-600px() {
     flex-direction: column;
