--- a/src/components/navbar/Navbar.css
+++ b/src/components/navbar/Navbar.css
@@ -1,24 +1,3 @@
-.menu-list-close {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-}
-
-@media (max-width: 900px) {
-  .menu-list-close {
-    -webkit-transform: translateX(-400rem);
-            transform: translateX(-400rem);
-    -webkit-transition: all 2s ease-out;
-    transition: all 2s ease-out;
-  }
-}
-
 .navbar-wrapper {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -62,18 +41,24 @@
 
 .navbar-wrapper .burger-menu .fas {
   font-size: 1.8rem;
+  color: grey;
 }
 
 .navbar-wrapper .burger-menu .fas:hover {
-  -webkit-transform: scale(1.1);
-          transform: scale(1.1);
-  -webkit-transition: all 0.3s ease-out;
-  transition: all 0.3s ease-out;
+  -webkit-transform: scale(1.2);
+          transform: scale(1.2);
+  -webkit-transition: all 0.2s ease-in;
+  transition: all 0.2s ease-in;
+  color: #004e92;
 }
 
 .navbar-wrapper .navbar .menu-list {
-  -webkit-transition: all 0.3s ease-out;
-  transition: all 0.3s ease-out;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 
 @media (max-width: 900px) {
@@ -82,12 +67,48 @@
     -webkit-box-direction: normal;
         -ms-flex-direction: column;
             flex-direction: column;
+    -webkit-transition: all 0.4s ease-in;
+    transition: all 0.4s ease-in;
+    background: -webkit-gradient(linear, left top, right top, from(#000428), to(#004e92));
+    background: linear-gradient(to right, #000428, #004e92);
+    width: 100vw;
+  }
+}
+
+.navbar-wrapper .navbar .menu-list-close {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+@media (max-width: 900px) {
+  .navbar-wrapper .navbar .menu-list-close {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-transition: all 0.4s ease-in;
+    transition: all 0.4s ease-in;
+    -webkit-transform: translateX(-700rem);
+            transform: translateX(-700rem);
+    width: 100vw;
+    background: -webkit-gradient(linear, left top, right top, from(#000428), to(#004e92));
+    background: linear-gradient(to right, #000428, #004e92);
   }
 }
 
 .navbar-wrapper .navbar li {
   list-style: none;
   padding: 0rem 0.6rem;
+}
+
+@media (max-width: 900px) {
+  .navbar-wrapper .navbar li {
+    padding: 0.6rem 0.6rem;
+  }
 }
 
 .navbar-wrapper .navbar a {
@@ -97,8 +118,20 @@
   font-weight: 500;
 }
 
+@media (max-width: 900px) {
+  .navbar-wrapper .navbar a {
+    color: white;
+  }
+}
+
 .navbar-wrapper .navbar a:hover {
   border-bottom: 2px solid white;
   color: white;
+}
+
+@media (max-width: 900px) {
+  .navbar-wrapper .navbar a:hover {
+    color: silver;
+  }
 }
 /*# sourceMappingURL=Navbar.css.map */
