--- a/src/components/pages/Home.scss
+++ b/src/components/pages/Home.scss
@@ -14,15 +14,11 @@
 // --------------
 
 .Hero-section {
-  height: 80vh;
+  // height: 80vh;
   display: flex;
   justify-content: space-between;
   align-items: center;
   flex-direction: column;
-
-  @include at-900px() {
-    height: 50vh;
-  }
 
   .background-video {
     position: absolute;
@@ -30,13 +26,13 @@
     left: 0;
     object-fit: cover;
     width: 100%;
-    height: 90vh;
+    height: 100vh;
     z-index: -1;
   }
 }
 
 .section-drone-flying {
-  height: 40vh;
+  // height: 40vh;
   padding: 1rem 1rem;
   background-color: rgb(66, 65, 65);
   color: white;
@@ -46,7 +42,7 @@
 
   @include at-600px() {
     flex-direction: column;
-    height: 60vh;
+    // height: 60vh;
   }
 
   .FlyingDrone {
@@ -64,7 +60,7 @@
 }
 
 .section-card {
-  height: 100%;
+  // height: 100%;
   padding: 2rem;
   display: flex;
   justify-content: center;
