--- a/src/components/navbar/Navbar.scss
+++ b/src/components/navbar/Navbar.scss
@@ -95,7 +95,8 @@
 
     a {
       text-decoration: none;
-      color: black;
+      color: grey;
+      text-shadow: 1px 1px 1px black;
       font-size: 1.2rem;
       font-weight: 500;
       //   background-color: white;
